<?xml version="1.0" encoding="utf-8"?><!--
    This layout defines the main activity screen and displays a list of Note Entries (if they exist),
    and a floating action button that launches another activity.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_color">

    <!-- RecyclerView that is responsible for holding a list of Note Entries data -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false" />

    <!-- Floating action button that launches AddNoteActivity when clicked -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addNoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        app:srcCompat="@android:drawable/ic_input_add" />

</FrameLayout>

